; ModuleID = '/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/glxx/extr_glxx_client.c_set_blend_func.c'
source_filename = "/home/carl/AnghaBench/RetroArch/gfx/include/userland/interface/khronos/glxx/extr_glxx_client.c_set_blend_func.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@glBlendFuncSeparate_impl = common dso_local global i32 0, align 4
@GLBLENDFUNCSEPARATE_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32, i32, i32)* @set_blend_func to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_blend_func(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %11 = load i32, i32* @glBlendFuncSeparate_impl, align 4
  %12 = load i32*, i32** %6, align 8
  %13 = load i32, i32* @GLBLENDFUNCSEPARATE_ID, align 4
  %14 = load i32, i32* %7, align 4
  %15 = call i32 @RPC_ENUM(i32 %14)
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @RPC_ENUM(i32 %16)
  %18 = load i32, i32* %9, align 4
  %19 = call i32 @RPC_ENUM(i32 %18)
  %20 = load i32, i32* %10, align 4
  %21 = call i32 @RPC_ENUM(i32 %20)
  %22 = call i32 @RPC_CALL4(i32 %11, i32* %12, i32 %13, i32 %15, i32 %17, i32 %19, i32 %21)
  ret void
}

declare dso_local i32 @RPC_CALL4(i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @RPC_ENUM(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
